<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021-2023 AOSP-Krypton Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">Updater</string>

    <!-- Update checker -->
    <string name="new_system_update">New system update detected</string>
    <string name="new_system_update_description">Click here to download and install the update</string>
    <string name="auto_update_check_failed">Automatic update check failed</string>
    <string name="auto_update_check_failed_desc">Please check for updates manually</string>
    <string name="update_checker_service_notification_channel_name">Automatic update check service</string>

    <!-- Download -->
    <string name="downloading">Downloading</string>
    <string name="downloading_update">Downloading update</string>
    <string name="downloading_failed">Download failed</string>
    <string name="downloading_finished">Download finished</string>

    <!-- Main activity -->
    <string name="updater_logo_description">Updater logo</string>
    <string name="system_version_format" translatable="false">
        KOSP v<xliff:g example="2.3" id="version">%1$s</xliff:g>
    </string>
    <string name="check_for_updates">Check for updates</string>
    <string name="checking_for_update">Checking for updates…</string>
    <string name="update_check_failed">Update check failed</string>
    <string name="last_checked_time_format">
        Last checked at <xliff:g example="11:02 AM" id="time">%1$s</xliff:g>
    </string>
    <string name="up_to_date">Your device is up-to-date</string>
    <string name="come_back_later">Come back later…</string>
    <string name="new_update_available">New update available</string>
    <string name="new_update_description_format">
        v<xliff:g example="2.3" id="version">%1$s</xliff:g>\u0020\u0020|\u0020\u0020<xliff:g example="12-11-2021" id="date">%2$s</xliff:g>\u0020\u0020|\u0020\u0020<xliff:g example="1.3GB" id="size">%3$s</xliff:g>
    </string>
    <string name="download">Download</string>
    <string name="select_download_source">Select download source</string>
    <string name="update">Update</string>
    <string name="download_text_format">
        Downloading - <xliff:g example="100" id="percent">%1$s%%</xliff:g>
    </string>
    <string name="waiting">Waiting</string>
    <string name="retrying">Retrying</string>
    <string name="restoring_state">Restoring state</string>
    <string name="exporting_file">Exporting file to internal storage</string>
    <string name="exporting_failed">Exporting file failed: <xliff:g example="Exception" id="reason">%1$s</xliff:g></string>
    <string name="menu_button_content_desc">Menu button</string>
    <string name="updater_logo_content_desc">Updater logo</string>
    <string name="settings_menu_item_desc">Settings menu item</string>
    <string name="local_upgrade_menu_item_desc">Local upgrade menu item</string>
    <string name="exported_file_successfully">Exported OTA file successfully</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_menu_item_desc">Download menu item</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_menu_item_desc">Clear cache menu item</string>
    <string name="activity_not_found">No activities found to open export directory</string>
    <string name="failed_to_acquire_uri">Failed to acquire uri for the export directory</string>

    <!-- Changelog -->
    <string name="changelog">Changelog</string>
    <string name="changelog_unavailable">Changelog unavailable</string>

    <!-- Update -->
    <string name="successfully_copied">Successfully copied</string>
    <string name="low_battery_plug_in">Low battery, plug in to continue</string>
    <string name="payload_generation_failed">Payload info generation failed: <xliff:g example="Exception" id="reason">%1$s</xliff:g></string>
    <string name="failed_to_retrieve_offset_and_size">Failed to retrieve offset and size from metadata file</string>
    <string name="failed_to_retrieve_header_key_value_pair">Failed to retrieve header key value pair from payload properties file</string>
    <string name="zip_does_not_contain_metadata_file">Zip file does not contain metadata file</string>
    <string name="metadata_file_empty">Metadata file is empty</string>
    <string name="failed_to_extract_offset_and_size">Failed to extract offset and size from metadata</string>
    <string name="zip_file_does_not_contain_payload_properties">Zip file does not contain payload properties file</string>
    <string name="payload_properties_file_does_not_have_key_value_pairs">Payload properties file does not contain required header key value pairs</string>
    <string name="metadata_verification_failed">Metadata verification failed</string>
    <string name="not_enough_space">Not enough space in device</string>
    <string name="applying_payload_failed">Applying payload failed: <xliff:g example="Exception" id="reason">%1$s</xliff:g></string>
    <string name="installing_update">Installing update</string>
    <string name="installation_failed">Installation failed</string>
    <string name="reboot">Reboot</string>
    <string name="initializing">Initializing…</string>
    <string name="installation_finished">Installation finished</string>
    <string name="installation_paused">Installation paused</string>
    <string name="installing_update_format">Installing update - <xliff:g example="100.00" id="percent">%1$s%%</xliff:g></string>
    <string name="verifying_update">Verifying - <xliff:g example="100.00" id="percent">%1$s%%</xliff:g></string>
    <string name="pause">Pause</string>
    <string name="downgrading_not_allowed">Downgrading is not allowed</string>
    <string name="rootfs_verification_failed">Rootfs verification failed, try again</string>
    <string name="update_transfer_error">Update transfer failed</string>
    <string name="resume">Resume</string>
    <string name="local_upgrade">Local upgrade</string>
    <string name="popup_menu">Popup menu</string>
    <string name="copying_file">Copying file</string>
    <string name="copying_failed">Copying failed: <xliff:g example="Exception" id="reason">%1$s</xliff:g></string>
    <string name="install_update">Install update</string>
    <string name="update_installation_failed_with_code">Update failed with error code <xliff:g example="20" id="error_code">%1$d</xliff:g></string>
    <string name="failed_to_verify_update_file">Failed to verify update file</string>
    <string name="update_install_service_notification_channel_name">Update install service</string>
    <string name="auto_reboot_notification_text">Auto rebooting in <xliff:g example="1:00 minute" id="duration">%1$s</xliff:g></string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="update_check_interval_title">Periodic update check interval</string>
    <string name="update_check_interval_summary">Number of days after which updates should be checked, periodically</string>
    <string name="opt_out_incremental_title">Opt out of incremental updates</string>
    <string name="opt_out_incremental_summary">Always install full updates. Required for rooted users or those who have modified their system in any manner</string>
    <string name="redirecting">Redirecting</string>
    <string name="confirm_to_open_file_picker">Click on the OK button to open file manager for selecting the folder to export downloads. Note that this requires the stock file manager to be installed.</string>
    <string name="export_downloads">Export downloads</string>
    <string name="export_downloads_summary">Enable to automatically export downloaded OTA files</string>
    <string name="auto_reboot">Auto reboot</string>
    <string name="auto_reboot_summary">Whether to auto reboot after a successful system update</string>
    <string name="auto_reboot_delay">Auto reboot delay</string>
    <string name="auto_reboot_delay_summary">Duration of time to wait before auto rebooting device</string>

</resources>