<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021-2022 AOSP-Krypton Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SeekBarPreference
        android:defaultValue="7"
        android:key="update_check_interval_preference"
        android:max="30"
        android:summary="@string/update_check_interval_summary"
        android:title="@string/update_check_interval_title"
        app:min="1"
        app:showSeekBarValue="true" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="opt_out_incremental_preference"
        android:summary="@string/opt_out_incremental_summary"
        android:title="@string/opt_out_incremental_title" />
</PreferenceScreen>