<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021-2022 AOSP-Krypton Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainViewModel"
            type="com.krypton.updater.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layoutDescription="@xml/activity_main_expansion_scene"
        tools:context=".ui.MainActivity">

        <ImageButton
            android:id="@+id/popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/popup_menu"
            android:onClick="showPopupMenu"
            android:src="@drawable/ic_baseline_menu_open_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/updater_logo"
            android:layout_width="@dimen/updater_logo_size"
            android:layout_height="@dimen/updater_logo_size"
            android:background="@android:color/transparent"
            android:contentDescription="@string/updater_logo_description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_updater_logo"
            app:layout_constraintBottom_toTopOf="@id/system_build_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/system_build_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_view_margin_vertical"
            android:text="@{@string/system_build_info_format(mainViewModel.systemBuildDate, mainViewModel.systemBuildVersion)}"
            app:layout_constraintBottom_toTopOf="@id/check_updates_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/updater_logo"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/check_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_view_margin_vertical"
            android:enabled="@{mainViewModel.allowUpdateCheck}"
            android:onClick="@{() -> mainViewModel.checkForUpdates()}"
            android:text="@string/check_for_updates"
            app:layout_constraintBottom_toTopOf="@id/update_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/system_build_info"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/update_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_view_margin_vertical"
            android:textStyle="normal"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/card_guideline_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_updates_button"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Last checked at 31/12/2022 12:43 pm" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/card_guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.00" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/card_fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/card_background"
            android:padding="24dp"
            app:layout_constraintBottom_toTopOf="@id/card_guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_guideline_top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/card_guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.35" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>